--- a/src/RoomAssignment/Signin_Signout.form
+++ b/src/RoomAssignment/Signin_Signout.form
@@ -10,6 +10,7 @@
       <Font name="Century Gothic" size="10" style="0"/>
     </Property>
     <Property name="name" type="java.lang.String" value="SigninSignout" noResource="true"/>
+    <Property name="undecorated" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
