--- a/src/RoomAssignment/Add_User.form
+++ b/src/RoomAssignment/Add_User.form
@@ -8,9 +8,6 @@
     </Property>
     <Property name="name" type="java.lang.String" value="frmAddNewProgramHead" noResource="true"/>
     <Property name="undecorated" type="boolean" value="true"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[285, 426]"/>
-    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -53,7 +50,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder justification="1" position="2" title="Add New Program Head">
+            <TitledBorder justification="1" position="2" title="Add User">
               <Font PropertyName="font" name="Century Gothic" size="14" style="3"/>
             </TitledBorder>
           </Border>
@@ -84,6 +81,7 @@
                               <Component id="txtID" min="-2" pref="149" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <Component id="lblError" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="btnAdd" min="-2" pref="70" max="-2" attributes="0"/>
@@ -110,16 +108,17 @@
                                   <Component id="lblMiddleName" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lblLastName" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="lblDepartment" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblRoles" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="cbRoles" max="32767" attributes="0"/>
                                   <Component id="txtDepartment" max="32767" attributes="0"/>
                                   <Component id="txtMiddleName" max="32767" attributes="0"/>
                                   <Component id="txtLastName" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <Component id="lblError" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -159,6 +158,11 @@
                       <Component id="txtDepartment" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="cbRoles" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblRoles" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lblPassword" min="-2" max="-2" attributes="0"/>
                       <Component id="pfPassword" min="-2" max="-2" attributes="0"/>
@@ -177,7 +181,7 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblError" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="139" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -357,6 +361,32 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Department"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblRoles">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Century Gothic" size="12" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Roles"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="cbRoles">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Century Gothic" size="11" style="0"/>
+            </Property>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="Teacher"/>
+                <StringItem index="1" value="Program Head"/>
+                <StringItem index="2" value="Adminstrator"/>
+                <StringItem index="3" value=" "/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
